// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SmartBack should renders with options 1`] = `
SmartBackService {
  "ARROW_TRIGGERING_OFFSET": "10",
  "CALLBACK": [Function],
  "ENABLE_ARROW_MIRRORING": false,
  "STATIC_ACTIVE_TRANSLATE_X": "50",
  "TRANSITION_DURATION": "150",
  "VIBRATION": 20,
  "_arrow": SmartBackArrow {
    "instance": [Circular],
    "isActive": false,
  },
  "_listeners": SmartBackListeners {
    "instance": [Circular],
  },
  "_listenersHandling": SmartBackListenersHandling {
    "boundAdditionalListeners": Object {
      "touchcancel": [Function],
      "touchend": [Function],
      "touchmove": [Function],
    },
    "boundListeners": Object {
      "touchstart": [Function],
    },
    "instance": [Circular],
  },
  "_movement": SmartBackMovement {
    "currentDirections": Object {
      "horizontal": "",
      "vertical": "",
    },
    "currentSide": "",
    "instance": [Circular],
    "isNeedBreak": false,
    "movedToCancelAlongX": 0,
    "needSkipEvent": false,
    "prevClientX": 0,
    "prevClientY": 0,
    "subtrahendValueAlongX": 0.002,
    "subtrahendValueAlongY": 0.002,
    "translateX": 0,
    "translateY": 0,
    "variationAlongX": 0.4,
    "variationAlongY": 0.4,
    "variationLimit": 0.045,
  },
  "_nodes": SmartBackNodes {
    "arrowNode": <div
      class="smart-back__arrow"
      id="smart_back_arrow"
    >
      
        
      <div
        class="smart-back__arrow-part smart-back__arrow-part-1"
      />
      
        
      <div
        class="smart-back__arrow-part smart-back__arrow-part-2"
      />
      
      
    </div>,
    "instance": [Circular],
    "sideNodes": Object {
      "left": <div
        class="smart-back__side smart-back__side--left"
        data-side="left"
        id="smart_back_side_left"
      />,
      "right": <div
        class="smart-back__side smart-back__side--right"
        data-side="right"
        id="smart_back_side_right"
      />,
    },
  },
  "_options": SmartBackOptions {
    "options": Object {
      "arrowTriggeringOffset": "10",
      "callback": [Function],
      "enableArrowMirroring": false,
      "staticActiveTranslateX": "50",
      "transitionDuration": "150",
      "vibration": 20,
    },
  },
  "_ui": SmartBackUI {
    "instance": [Circular],
    "uiNode": <div
      class="smart-back"
    >
      
      
      <div
        class="smart-back__side smart-back__side--left"
        data-side="left"
        id="smart_back_side_left"
      />
      
      
      <div
        class="smart-back__side smart-back__side--right"
        data-side="right"
        id="smart_back_side_right"
      />
      
      
      <div
        class="smart-back__arrow"
        id="smart_back_arrow"
      >
        
        
        <div
          class="smart-back__arrow-part smart-back__arrow-part-1"
        />
        
        
        <div
          class="smart-back__arrow-part smart-back__arrow-part-2"
        />
        
      
      </div>
      
    
    </div>,
  },
  "arrowId": "smart_back_arrow",
  "classes": Object {
    "side": "smart-back__side",
    "sideLeft": "smart-back__side--left",
    "sideRight": "smart-back__side--right",
    "wrapper": "smart-back",
  },
  "leftSideId": "smart_back_side_left",
  "rightSideId": "smart_back_side_right",
}
`;

exports[`SmartBack should renders without options 1`] = `
SmartBackService {
  "ARROW_TRIGGERING_OFFSET": 2,
  "CALLBACK": [Function],
  "ENABLE_ARROW_MIRRORING": true,
  "STATIC_ACTIVE_TRANSLATE_X": 40,
  "TRANSITION_DURATION": 140,
  "VIBRATION": 10,
  "_arrow": SmartBackArrow {
    "instance": [Circular],
    "isActive": false,
  },
  "_listeners": SmartBackListeners {
    "instance": [Circular],
  },
  "_listenersHandling": SmartBackListenersHandling {
    "boundAdditionalListeners": Object {
      "touchcancel": [Function],
      "touchend": [Function],
      "touchmove": [Function],
    },
    "boundListeners": Object {
      "touchstart": [Function],
    },
    "instance": [Circular],
  },
  "_movement": SmartBackMovement {
    "currentDirections": Object {
      "horizontal": "",
      "vertical": "",
    },
    "currentSide": "",
    "instance": [Circular],
    "isNeedBreak": false,
    "movedToCancelAlongX": 0,
    "needSkipEvent": false,
    "prevClientX": 0,
    "prevClientY": 0,
    "subtrahendValueAlongX": 0.002,
    "subtrahendValueAlongY": 0.002,
    "translateX": 0,
    "translateY": 0,
    "variationAlongX": 0.4,
    "variationAlongY": 0.4,
    "variationLimit": 0.045,
  },
  "_nodes": SmartBackNodes {
    "arrowNode": <div
      class="smart-back__arrow"
      id="smart_back_arrow"
    >
      
        
      <div
        class="smart-back__arrow-part smart-back__arrow-part-1"
      />
      
        
      <div
        class="smart-back__arrow-part smart-back__arrow-part-2"
      />
      
      
    </div>,
    "instance": [Circular],
    "sideNodes": Object {
      "left": <div
        class="smart-back__side smart-back__side--left"
        data-side="left"
        id="smart_back_side_left"
      />,
      "right": <div
        class="smart-back__side smart-back__side--right"
        data-side="right"
        id="smart_back_side_right"
      />,
    },
  },
  "_options": SmartBackOptions {
    "options": Object {},
  },
  "_ui": SmartBackUI {
    "instance": [Circular],
    "uiNode": <div
      class="smart-back"
    >
      
      
      <div
        class="smart-back__side smart-back__side--left"
        data-side="left"
        id="smart_back_side_left"
      />
      
      
      <div
        class="smart-back__side smart-back__side--right"
        data-side="right"
        id="smart_back_side_right"
      />
      
      
      <div
        class="smart-back__arrow"
        id="smart_back_arrow"
      >
        
        
        <div
          class="smart-back__arrow-part smart-back__arrow-part-1"
        />
        
        
        <div
          class="smart-back__arrow-part smart-back__arrow-part-2"
        />
        
      
      </div>
      
    
    </div>,
  },
  "arrowId": "smart_back_arrow",
  "classes": Object {
    "side": "smart-back__side",
    "sideLeft": "smart-back__side--left",
    "sideRight": "smart-back__side--right",
    "wrapper": "smart-back",
  },
  "leftSideId": "smart_back_side_left",
  "rightSideId": "smart_back_side_right",
}
`;
